--- a/details.css
+++ b/details.css
@@ -1,4 +1,4 @@
-body {background-image: url('images/background3.png'); margin: 0; background-attachment: fixed;}
+body {background-repeat: no-repeat; background-image: url('images/background3.png'); margin: 0; background-attachment: fixed;}
 div {position: relative; margin: 0px 0 50px 0; background-color: #F9F9F9; width: 70%; left: 15%; height: 150px;}
 p {font-size: 1.5rem; padding: 10px 0 0 10px; margin: 0;}
 img {position: absolute; top: 20%; right: 38px; width: 12%;}
