--- a/kaarten.css
+++ b/kaarten.css
@@ -1,4 +1,4 @@
-body {background-image: url('images/background3.png'); margin: 0px; background-attachment: fixed;}
+body {background-repeat: no-repeat; background-image: url('images/background3.png'); margin: 0px; background-attachment: fixed;}
 div {position: relative; margin: 0px 0 50px 0; background-color: #F9F9F9; width: 750px; left: 15%; height: auto;}
 p {font-size: 1.5rem; padding: 10px 0 0 10px; margin: 0px;}
 
